--- a/src/main/resources/com/example/tppoo/RdvPatient.fxml
+++ b/src/main/resources/com/example/tppoo/RdvPatient.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.rdvController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="702.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.RdvPatientController">
     <children>
         <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
@@ -31,21 +28,15 @@
 
             </children>
         </Pane>
-        <Button fx:id="Ajouter" layoutX="538.0" layoutY="358.0" mnemonicParsing="false" onAction="#Ajouter" style="-fx-background-color: #0066b2;" text="Ajouter un rendez-vous" textFill="WHITE" />
-      <DatePicker fx:id="searchBar" layoutX="260.0" layoutY="14.0" />
-      <Label layoutX="208.0" layoutY="18.0" text="Date:" textFill="#0066b2" />
-      <Button fx:id="searchButton" layoutX="613.0" layoutY="12.0" minWidth="45.0" mnemonicParsing="false" onAction="#Searche" prefHeight="31.0" prefWidth="45.0" style="-fx-background-color: #0066b2;" text="O" />
-      <Accordion />
-      <TableView fx:id="table" layoutX="146.0" layoutY="60.0" prefHeight="293.0" prefWidth="542.0">
-          <columns>
-              <TableColumn fx:id="typeColumn" prefWidth="101.33328247070312" text="Type" />
-              <TableColumn fx:id="titleColumn" prefWidth="96.66668701171875" text="Titre" />
-              <TableColumn fx:id="dateColumn" prefWidth="107.33331298828125" text="Date" />
-              <TableColumn fx:id="timeColumn" prefWidth="84.0" text="Heur" />
-              <TableColumn fx:id="durationColumn" prefWidth="161.99993896484375" text="Durée" />
-          </columns>
-      </TableView>
-      <ComboBox fx:id="type" layoutX="474.0" layoutY="14.0" prefHeight="27.0" prefWidth="108.0" promptText="  Type Rdv" />
-      <Button fx:id="delete" layoutX="146.0" layoutY="358.0" mnemonicParsing="false" onAction="#deleteSelectedRdv" style="-fx-background-color: #0066b2;" text="Supprimer" textFill="WHITE" />
+        <Button fx:id="Ajouter" layoutX="617.0" layoutY="358.0" mnemonicParsing="false" onAction="#Ajouter" style="-fx-background-color: #0066b2;" text="Ajouter " textFill="WHITE" />
+        <Button fx:id="retourner" layoutX="157.0" layoutY="358.0" mnemonicParsing="false" onAction="#Retourner" style="-fx-background-color: #0066b2;" text="Retour" textFill="WHITE" />
+        <Pane layoutX="157.0" layoutY="28.0" prefHeight="315.0" prefWidth="524.0" style="-fx-background-color: white;">
+            <children>
+                <ScrollPane fx:id="scrollpane" layoutX="57.0" layoutY="47.0" prefHeight="212.0" prefWidth="422.0" />
+                <Label layoutX="57.0" layoutY="23.0" text="Patients:" textFill="#0066b2" />
+            <Label fx:id="thematiquelabel" layoutX="57.0" layoutY="270.0" text="Thématique:" textFill="WHITE" />
+            <TextField fx:id="thematique" layoutX="138.0" layoutY="266.0" style="-fx-background-color: white;" />
+            </children>
+        </Pane>
     </children>
 </AnchorPane>
