--- a/src/main/resources/com/example/tppoo/InfoRdv.fxml
+++ b/src/main/resources/com/example/tppoo/InfoRdv.fxml
@@ -2,16 +2,13 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.rdvController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.InfoRDVController">
     <children>
         <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
@@ -31,22 +28,26 @@
 
             </children>
         </Pane>
-        <Button fx:id="Ajouter" layoutX="538.0" layoutY="358.0" mnemonicParsing="false" onAction="#Ajouter" style="-fx-background-color: #0066b2;" text="Ajouter un rendez-vous" textFill="WHITE" />
-      <DatePicker fx:id="searchBar" layoutX="260.0" layoutY="14.0" />
-      <Label layoutX="208.0" layoutY="18.0" text="Date:" textFill="#0066b2" />
-      <Button fx:id="searchButton" layoutX="613.0" layoutY="12.0" minWidth="45.0" mnemonicParsing="false" onAction="#Searche" prefHeight="31.0" prefWidth="45.0" style="-fx-background-color: #0066b2;" text="O" />
-      <Accordion />
-      <TableView fx:id="table" layoutX="146.0" layoutY="60.0" prefHeight="293.0" prefWidth="542.0">
-          <columns>
-              <TableColumn fx:id="typeColumn" prefWidth="101.33328247070312" text="Type" />
-              <TableColumn fx:id="titleColumn" prefWidth="96.66668701171875" text="Titre" />
-              <TableColumn fx:id="dateColumn" prefWidth="107.33331298828125" text="Date" />
-              <TableColumn fx:id="timeColumn" prefWidth="84.0" text="Heur" />
-              <TableColumn fx:id="durationColumn" prefWidth="161.99993896484375" text="Durée" />
-          </columns>
-      </TableView>
-      <ComboBox fx:id="type" layoutX="474.0" layoutY="14.0" prefHeight="27.0" prefWidth="108.0" promptText="  Type Rdv" />
-      <Button fx:id="delete" layoutX="146.0" layoutY="358.0" mnemonicParsing="false" onAction="#deleteSelectedRdv" style="-fx-background-color: #0066b2;" text="Supprimer" textFill="WHITE" />
-      <Button fx:id="delete1" layoutX="237.0" layoutY="358.0" mnemonicParsing="false" onAction="#checkRdv" style="-fx-background-color: #0066b2;" text="Consulter" textFill="WHITE" />
+        <Button fx:id="creerdossier" layoutX="575.0" layoutY="341.0" mnemonicParsing="false" onAction="#AjouterDossier" style="-fx-background-color: #0066b2;" text="Créer Dossier" textFill="WHITE" />
+        <Accordion />
+        <Button fx:id="retourner" layoutX="167.0" layoutY="341.0" mnemonicParsing="false" onAction="#RetournerRDV" style="-fx-background-color: #0066b2;" text="Retourner" textFill="WHITE" />
+        <Label layoutX="172.0" layoutY="51.0" text="Date:" textFill="#0066b2" underline="true" />
+        <Label fx:id="titre" layoutX="214.0" layoutY="24.0" text="titre" />
+        <Label layoutX="169.0" layoutY="80.0" text="Heure:" textFill="#0066b2" underline="true" />
+        <Label layoutX="426.0" layoutY="50.0" text="Durée:" textFill="#0066b2" underline="true" />
+        <Label layoutX="429.0" layoutY="23.0" text="Type:" textFill="#0066b2" underline="true" />
+        <Label layoutX="171.0" layoutY="24.0" text="Titre:" textFill="#0066b2" underline="true" />
+        <Label fx:id="thematiquelabel" layoutX="426.0" layoutY="79.0" text="Thematique" textFill="#0066b2" underline="true" />
+        <Label fx:id="date" layoutX="213.0" layoutY="51.0" text="Date" />
+        <Label fx:id="heure" layoutX="209.0" layoutY="80.0" text="Heure" />
+        <Label fx:id="type" layoutX="471.0" layoutY="24.0" text="Type" />
+        <Label fx:id="durée" layoutX="471.0" layoutY="51.0" text="Durée" />
+        <Label fx:id="thematique" layoutX="498.0" layoutY="80.0" text="Thematique" />
+        <Label layoutX="169.0" layoutY="111.0" text="Patient(s):" textFill="#0066b2" underline="true" />
+        <ScrollPane fx:id="scrollpane" layoutX="169.0" layoutY="146.0" prefHeight="171.0" prefWidth="495.0">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+            </content>
+        </ScrollPane>
     </children>
 </AnchorPane>
