--- a/src/main/resources/com/example/tppoo/Bilan.fxml
+++ b/src/main/resources/com/example/tppoo/Bilan.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="681.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.DossierBOController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="673.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.BilanController">
     <children>
         <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
@@ -29,27 +28,36 @@
 
             </children>
         </Pane>
-        <Pane layoutX="153.0" layoutY="21.0" prefHeight="364.0" prefWidth="501.0" style="-fx-background-color: white; -fx-border-color: black;">
+        <Pane layoutX="153.0" layoutY="21.0" prefHeight="364.0" prefWidth="497.0" style="-fx-background-color: white; -fx-border-color: black;">
             <children>
-                <Button fx:id="FicheSuivi" layoutX="168.0" layoutY="1.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: white;" text="Bilan" underline="true" />
-                <Button fx:id="profil" layoutX="1.0" layoutY="1.0" mnemonicParsing="false" onAction="#Profil" prefHeight="19.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: blacl;" text="Profil" underline="true">
+                <Button layoutX="168.0" layoutY="1.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: white;" text="Bilan" underline="true" />
+                <Button fx:id="profil" layoutX="1.0" layoutY="1.0" mnemonicParsing="false" onAction="#Profil" prefHeight="27.0" prefWidth="167.0" style="-fx-background-color: white; -fx-border-color: blacl;" text="Profil" underline="true">
                     <opaqueInsets>
                         <Insets bottom="13.0" />
                     </opaqueInsets>
                 </Button>
-                <Button fx:id="Appointements" layoutX="329.0" layoutY="1.0" mnemonicParsing="false" onAction="#Dossier" prefHeight="27.0" prefWidth="174.0" style="-fx-background-color: #0066b2;" text="Dossier" textFill="WHITE" underline="true" />
+                <Button fx:id="Appointements" layoutX="329.0" layoutY="1.0" mnemonicParsing="false" onAction="#Dossier" prefHeight="27.0" prefWidth="167.0" style="-fx-background-color: #0066b2;" text="Dossier" textFill="WHITE" underline="true" />
                 <Line endX="331.0" layoutX="168.0" layoutY="28.0" startX="-166.99998474121094" />
-                <Button fx:id="Appointements1" layoutX="42.0" layoutY="41.0" mnemonicParsing="false" onAction="#Dossier" prefHeight="27.0" prefWidth="167.0" style="-fx-background-color: white;" text="RDV" underline="true" />
-                <Button fx:id="Appointements11" layoutX="272.0" layoutY="41.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="167.0" style="-fx-background-color: #0066b2;" text="Bilans" textFill="WHITE" underline="true" />
-                <Line endX="273.0" layoutX="166.0" layoutY="68.0" startX="-123.99998474121094" />
-                <TableView fx:id="table" layoutX="14.0" layoutY="74.0" prefHeight="241.0" prefWidth="467.0">
-                    <columns>
-                        <TableColumn fx:id="num" text="N°" />
-                  <TableColumn fx:id="ListeBO" prefWidth="385.6666717529297" text="ListeBilans " />
-                    </columns>
-                </TableView>
-            <Button layoutX="393.0" layoutY="323.0" mnemonicParsing="false" style="-fx-background-color: #0066b2;" text="Ajouter Bilan " textFill="WHITE" />
-            <Button fx:id="bilan" layoutX="14.0" layoutY="323.0" mnemonicParsing="false" onAction="#checkRdv" style="-fx-background-color: #0066b2;" text="Consulter" textFill="WHITE" />
+            <Button fx:id="Anamnese" layoutX="65.0" layoutY="56.0" mnemonicParsing="false" onAction="#Anamnese" prefHeight="113.0" prefWidth="161.0" style="-fx-background-color: #b7e8fd; -fx-border-color: black;" text="Anamnese" underline="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Button>
+            <Button fx:id="epreuveClinique" layoutX="276.0" layoutY="57.0" mnemonicParsing="false" onAction="#Test" prefHeight="113.0" prefWidth="161.0" style="-fx-background-color: #b7e8fd; -fx-border-color: black;" text="Epreuves Cliniques">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="Diagnostic" layoutX="65.0" layoutY="195.0" mnemonicParsing="false" prefHeight="113.0" prefWidth="161.0" style="-fx-background-color: #b7e8fd; -fx-border-color: black;" text="Diagnostic">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="ProjetT" layoutX="276.0" layoutY="196.0" mnemonicParsing="false" onAction="#ProjetT" prefHeight="113.0" prefWidth="161.0" style="-fx-background-color: #b7e8fd; -fx-border-color: black;" text="Projet thérapeutique">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
             </children>
         </Pane>
     </children>
