--- a/src/main/resources/com/example/tppoo/AjoueterBilan.fxml
+++ b/src/main/resources/com/example/tppoo/AjoueterBilan.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.QLIBREController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.AjouterBilan">
     <children>
         <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
@@ -29,14 +30,18 @@
             </children>
         </Pane>
         <Accordion />
-        <TableView fx:id="table" layoutX="159.0" layoutY="23.0" prefHeight="311.0" prefWidth="527.0">
-            <columns>
-                <TableColumn fx:id="typeColumn" prefWidth="417.33331298828125" text="Enoncés" />
-                <TableColumn fx:id="titleColumn" prefWidth="109.99998474121094" text="Notes" />
-            </columns>
-        </TableView>
-        <Button fx:id="AjouetQ" layoutX="416.0" layoutY="344.0" mnemonicParsing="false" onAction="#Ajouter" style="-fx-background-color: #0066b2;" text="Ajouter Question" textFill="WHITE" />
-        <Button fx:id="Reponse" layoutX="159.0" layoutY="344.0" mnemonicParsing="false" onAction="#checkRdv" style="-fx-background-color: #0066b2;" text="Entrer la réponse du patient" textFill="WHITE" />
-        <Button fx:id="terminer" layoutX="618.0" layoutY="344.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
+        <Pane layoutX="204.0" layoutY="45.0" prefHeight="281.0" prefWidth="393.0" style="-fx-background-color: white; -fx-border-color: black;">
+            <children>
+                <Button fx:id="Reponse" layoutX="35.0" layoutY="225.0" mnemonicParsing="false" onAction="#retourner" style="-fx-background-color: #0066b2;" text="Retourner" textFill="WHITE" />
+                <Button fx:id="terminer" layoutX="302.0" layoutY="225.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Ajouter" textFill="WHITE" />
+                <TextField fx:id="titre" layoutX="81.0" layoutY="141.0" prefHeight="27.0" prefWidth="231.0" />
+                <Label layoutX="81.0" layoutY="114.0" text="Titre du nouveau bilan:" underline="true" />
+                <Label layoutX="112.0" layoutY="54.0" text="Creation du bilan clinique" underline="true">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
     </children>
 </AnchorPane>
