--- a/src/main/resources/com/example/tppoo/Diagnostic.fxml
+++ b/src/main/resources/com/example/tppoo/Diagnostic.fxml
@@ -4,15 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.AnamneseController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.DiagnosticController">
     <children>
-        <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
+        <Pane prefHeight="450.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
                 <Button fx:id="settings" layoutX="4.0" layoutY="314.0" mnemonicParsing="false" onAction="#settings" prefHeight="27.0" prefWidth="132.0" style="-fx-background-color: white;" text="     Paramètres" />
                 <Button fx:id="patients" layoutX="4.0" layoutY="214.0" mnemonicParsing="false" onAction="#Patients" prefHeight="27.0" prefWidth="132.0" style="-fx-background-color: #0066b2;" text="Patients" textFill="WHITE" />
@@ -31,19 +30,15 @@
             </children>
         </Pane>
         <Accordion />
-        <Label layoutX="159.0" layoutY="372.0" text="Répondre au moins à une question pour chaque catégorie:" textAlignment="CENTER" underline="true">
-            <font>
-                <Font size="9.0" />
-            </font>
-        </Label>
-        <Button fx:id="terminer" layoutX="379.0" layoutY="314.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
-      <Label layoutX="186.0" layoutY="76.0" text="Nom du/des trouble(s):" />
-      <Label layoutX="186.0" layoutY="114.0" text="Catégorie du/des trouble(s):" />
-      <TextField fx:id="nom" layoutX="352.0" layoutY="72.0" />
-      <ScrollPane fx:id="scrollpane" layoutX="352.0" layoutY="108.0" prefHeight="172.0" prefWidth="300.0" style="-fx-background-color: white;">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+        <Button fx:id="terminer" layoutX="584.0" layoutY="384.0" mnemonicParsing="false" onAction="#enregistrer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
+        <Pane layoutX="186.0" layoutY="20.0" prefHeight="355.0" prefWidth="480.0">
+            <children>
+                <ScrollPane fx:id="scrollpane" layoutX="19.0" layoutY="204.0" prefHeight="115.0" prefWidth="439.0" />
+                <TextArea fx:id="enonce" layoutX="19.0" layoutY="51.0" prefHeight="115.0" prefWidth="439.0" />
+                <Label layoutX="19.0" layoutY="32.0" text="Description:" underline="true" />
+                <Label layoutX="19.0" layoutY="178.0" text="Catégories:" />
+            </children>
+        </Pane>
+        <Button fx:id="retourner" layoutX="211.0" layoutY="384.0" mnemonicParsing="false" onAction="#retourner" style="-fx-background-color: #0066b2;" text="Retourner" textFill="WHITE" />
     </children>
 </AnchorPane>
