--- a/src/main/resources/com/example/tppoo/InfoRdv.fxml
+++ b/src/main/resources/com/example/tppoo/InfoRdv.fxml
@@ -49,5 +49,6 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
             </content>
         </ScrollPane>
+      <Button fx:id="observation" layoutX="413.0" layoutY="341.0" mnemonicParsing="false" onAction="#Observation" style="-fx-background-color: #0066b2;" text="Observation" textFill="WHITE" />
     </children>
 </AnchorPane>
