--- a/src/main/resources/com/example/tppoo/InfoRdvPatient.fxml
+++ b/src/main/resources/com/example/tppoo/InfoRdvPatient.fxml
@@ -49,5 +49,6 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
             </content>
         </ScrollPane>
+      <Button fx:id="Observation" layoutX="361.0" layoutY="341.0" mnemonicParsing="false" style="-fx-background-color: #0066b2;" text=" Observation" textFill="WHITE" />
     </children>
 </AnchorPane>
