--- a/src/main/resources/com/example/tppoo/Observation.fxml
+++ b/src/main/resources/com/example/tppoo/Observation.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.QLIBREController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="703.0" style="-fx-background-color: #EDF1FF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tppoo.ObservationController">
     <children>
         <Pane prefHeight="400.0" prefWidth="140.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
             <children>
@@ -29,14 +30,13 @@
             </children>
         </Pane>
         <Accordion />
-        <TableView fx:id="table" layoutX="159.0" layoutY="23.0" prefHeight="311.0" prefWidth="527.0">
-            <columns>
-                <TableColumn fx:id="typeColumn" prefWidth="417.33331298828125" text="Enoncés" />
-                <TableColumn fx:id="titleColumn" prefWidth="109.99998474121094" text="Notes" />
-            </columns>
-        </TableView>
-        <Button fx:id="AjouetQ" layoutX="416.0" layoutY="344.0" mnemonicParsing="false" onAction="#Ajouter" style="-fx-background-color: #0066b2;" text="Ajouter Question" textFill="WHITE" />
-        <Button fx:id="Reponse" layoutX="159.0" layoutY="344.0" mnemonicParsing="false" onAction="#checkRdv" style="-fx-background-color: #0066b2;" text="Entrer la réponse du patient" textFill="WHITE" />
-        <Button fx:id="terminer" layoutX="618.0" layoutY="344.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
+        <Label layoutX="159.0" layoutY="372.0" text="Répondre au moins à une question pour chaque catégorie:" textAlignment="CENTER" underline="true">
+            <font>
+                <Font size="9.0" />
+            </font>
+        </Label>
+        <Button fx:id="terminer" layoutX="392.0" layoutY="319.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
+        <TextArea fx:id="demarche" layoutX="155.0" layoutY="59.0" prefHeight="242.0" prefWidth="523.0" />
+        <Label layoutX="155.0" layoutY="39.0" text="Observation:" />
     </children>
 </AnchorPane>
