--- a/src/main/resources/com/example/tppoo/AjouterExo.fxml
+++ b/src/main/resources/com/example/tppoo/AjouterExo.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
@@ -31,9 +32,11 @@
         <Accordion />
         <Button fx:id="Annuler" layoutX="159.0" layoutY="344.0" mnemonicParsing="false" onAction="#retourner" style="-fx-background-color: #0066b2;" text="Annuler" textFill="WHITE" />
         <Button fx:id="terminer" layoutX="618.0" layoutY="344.0" mnemonicParsing="false" onAction="#enregistrer" style="-fx-background-color: #0066b2;" text="Terminer" textFill="WHITE" />
-        <TextArea fx:id="enonce" layoutX="159.0" layoutY="65.0" prefHeight="105.0" prefWidth="521.0" />
-        <Label layoutX="159.0" layoutY="39.0" text="Consigne:" />
-        <Label fx:id="noteLabel" layoutX="159.0" layoutY="190.0" text="Materiels:" />
-      <TextArea fx:id="materiel" layoutX="159.0" layoutY="209.0" prefHeight="105.0" prefWidth="521.0" />
+        <TextArea fx:id="enonce" layoutX="159.0" layoutY="44.0" prefHeight="105.0" prefWidth="521.0" />
+        <Label layoutX="158.0" layoutY="25.0" text="Consigne:" />
+        <Label fx:id="noteLabel" layoutX="158.0" layoutY="159.0" text="Materiels:" />
+      <TextArea fx:id="materiel" layoutX="159.0" layoutY="178.0" prefHeight="105.0" prefWidth="521.0" />
+      <Label layoutX="159.0" layoutY="297.0" text="Note:" />
+      <TextField fx:id="note" layoutX="213.0" layoutY="293.0" />
     </children>
 </AnchorPane>
