--- a/src/main/resources/com/example/tppoo/AjouterPreuveTechnique.fxml
+++ b/src/main/resources/com/example/tppoo/AjouterPreuveTechnique.fxml
@@ -35,8 +35,8 @@
               <Button fx:id="Reponse" layoutX="35.0" layoutY="225.0" mnemonicParsing="false" onAction="#retourner" style="-fx-background-color: #0066b2;" text="Retourner" textFill="WHITE" />
               <Button fx:id="terminer" layoutX="302.0" layoutY="225.0" mnemonicParsing="false" onAction="#Terminer" style="-fx-background-color: #0066b2;" text="Ajouter" textFill="WHITE" />
             <TextField fx:id="titre" layoutX="81.0" layoutY="141.0" prefHeight="27.0" prefWidth="231.0" />
-            <Label layoutX="81.0" layoutY="114.0" text="Titre du nouveau bilan:" underline="true" />
-            <Label layoutX="112.0" layoutY="54.0" text="Creation du bilan clinique" underline="true">
+            <Label layoutX="81.0" layoutY="114.0" text="Titre d'une nouvelle épreuve:" underline="true" />
+            <Label layoutX="112.0" layoutY="54.0" text="Creation du l'épreuve clinique" underline="true">
                <font>
                   <Font size="15.0" />
                </font>
